update about, fix incorrect scrollbar toggling on firefox

--- a/src/app/static/styles/components/aeroheim.css
+++ b/src/app/static/styles/components/aeroheim.css
@@ -15,6 +15,8 @@
     animation-duration: 1s;
 
     overflow-x: hidden;
+    overflow-y: auto;
+    overflow-y: overlay;
 }
 
 .background::-webkit-scrollbar
